d_author entities made
