# src/entity/ECU.ts
@@ -1,32 +1,72 @@
-import { Column, Entity, JoinTable, ManyToMany, PrimaryGeneratedColumn } from 'typeorm';
+import { Entity, PrimaryGeneratedColumn, Column, CreateDateColumn, UpdateDateColumn, ManyToMany, JoinTable, ManyToOne, JoinColumn } from 'typeorm';
+import { NegativeResponseCode } from './NegativeCode';
 import { Vehicle } from './Vehicle';
+// import { NegativeResponseCode } from 'src/entity/NegativeResponseCode'; // Import the NegativeResponseCode entity
 
-@Entity()
+@Entity('ecu_management')
 export class ECU {
   @PrimaryGeneratedColumn()
   id?: number;
 
-  @Column({
-    length: 16,
-  })
-  name?: string;
+  @Column({ type: 'boolean', default: true })
+  is_active?: boolean;
 
-  @Column({
-    length: 16,
-  })
-  mac_address?: string;
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  mac_id?: string;
 
-  @ManyToMany(
-    () => Vehicle,
-    (vehicle) => {
-      vehicle.oem;
-    },
-    { onDelete: 'CASCADE', onUpdate: 'CASCADE', nullable: true },
-  )
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  ecu_name?: string;
+
+  @CreateDateColumn()
+  created_at?: Date;
+
+  @UpdateDateColumn()
+  updated_at?: Date;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  protocol?: string;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  dtc_dataset?: string;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  pid_dataset?: string;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  rx_header?: string;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  tx_header?: string;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  read_dtc_fc_index?: string;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  clear_dtc_fn_index?: string;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  read_data_fn_index?: string;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  write_data_fn_index?: string;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  seedkey_algo_fn_index?: string;
+
+  @Column({ type: 'varchar', length: 255, nullable: true })
+  ior_test_index?: string;
+
+  @ManyToMany(() => NegativeResponseCode, (negativeResponseCode) => negativeResponseCode.ecus)
   @JoinTable({
-    name: 'vehicle_ecu',
+    name: 'ecu_neg',
     joinColumn: { name: 'ecu_id' },
-    inverseJoinColumn: { name: 'vehicle_id' },
+    inverseJoinColumn: { name: 'neg_id' },
   })
-  vehicle?: Promise<Vehicle[]>;
+  negative_responses?: NegativeResponseCode[];
+
+  @ManyToOne(() => Vehicle, (vehicle) => vehicle.ecu, { nullable: true })
+  @JoinColumn({
+    name: 'vehicle_id',
+  })
+  vehicle?: Vehicle;
 }
